force-app/main/default/objects/QTB_Service_Location_SB_Event__e/QTB_Service_Location_SB_Event__e.object-meta.xml
<CustomObject>
    <description>GITLAB#774 - Service Location Platform Event</description>
    <label>Service Location SB Event</label>
    <pluralLabel>Service Location SB Events</pluralLabel>
</CustomObject>