force-app/main/default/objects/QTB_Service_Location_SB_Event__e/fields/QTB_Address3__c.field-meta.xml
<CustomField>
    <fullName>QTB_Address3__c</fullName>
    <description>GITLAB #774</description>
    <label>Address3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>