force-app/main/default/objects/QTB_Service_Location_SB_Event__e/fields/QTB_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Billing_Account__c</fullName>
    <description>GITLAB #774</description>
    <label>Billing Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>