force-app/main/default/objects/QTB_Service_Location_SB_Event__e/fields/QTB_City_name__c.field-meta.xml
<CustomField>
    <fullName>QTB_City_name__c</fullName>
    <description>GITLAB #774</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>