force-app/main/default/objects/QTB_Service_Location_SB_Event__e/fields/QTB_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_Id__c</fullName>
    <description>GITLAB #774</description>
    <label>Customer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>