force-app/main/default/objects/QTB_Service_Location_SB_Event__e/fields/QTB_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Postal_Code__c</fullName>
    <description>GITLAB #774</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>