force-app/main/default/objects/QTB_Service_Location_SB_Event__e/fields/QTB_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Site_Number__c</fullName>
    <label>Site Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>