force-app/main/default/objects/QTB_Service_Location_SB_Event__e/fields/QTB_State_Province__c.field-meta.xml
<CustomField>
    <fullName>QTB_State_Province__c</fullName>
    <description>GITLAB #774</description>
    <label>State Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>